feat(backend): implement basic jwt authentication mapping
